--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
+  //v3 variables
   --v3-accent-color: #150734;
   --v3-primary-color: #de2bfc;
   --v3-secondary-color: #00dbde;
@@ -11,4 +12,17 @@
   --v3-font-sans-serif-2: "Orbitron", sans-serif;
   --v3-header-height: 10vh;
   --v3-footer-height: 22vh;
+
+  //v2 variables
+  --v2-main-bg: rgb(3, 1, 1);
+  --v2-font-poppins: "Poppins", sans-serif;
+  --v2-color1: rgb(254, 196, 70);
+  --v2-color2: rgb(42, 205, 210);
+  --v2-color3: rgb(234, 93, 172);
+  --v2-color4: rgb(114, 113, 240);
+  --v2-font-color-main: white;
+  --v2-font-hirosh: "hirosh";
+  --v2-font-kato: "kato";
+  --v2-header-height: 8.5vh;
+  --v2-footer-height: 20vh;
 }
