--- a/styles/style.scss
+++ b/styles/style.scss
@@ -46,8 +46,14 @@
 // @import "./components/"
 
 //v2
-@import "./pages/v2/home";
-@import "./pages/v2/events";
+.v2 {
+  @import "./pages/v2/home";
+  @import "./pages/v2/events";
+  @import "./pages/v2/members";
+  @import "./components/v2/footer";
+  @import "./components/v2/header";
+  @import "./pages/v2/event";
+}
 // @import "./components/"
 //v3
 .v3 {
