--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,3 @@
-@import "../node_modules/bootstrap/scss/bootstrap";
-
 @import "./variables";
 @import "./globals";
 
@@ -17,6 +15,7 @@
   * {
     color: aliceblue;
     font-family: "Poppins";
+    cursor: none;
   }
   a {
     color: inherit;
@@ -34,8 +33,8 @@
     font-weight: 500;
   }
   .black-text-outline {
-    text-shadow: #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px,
-      #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px;
+    text-shadow: #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px,
+      #000 0px 0px 3px;
   }
 
   @import "./pages/v1/home";
@@ -79,11 +78,7 @@
     font-size: 1.1rem;
     color: white;
     border: none;
-    background: linear-gradient(
-      90deg,
-      var(--v3-primary-color),
-      var(--v3-secondary-color)
-    );
+    background: linear-gradient(90deg, var(--v3-primary-color), var(--v3-secondary-color));
     height: fit-content;
   }
   .text-container {
