--- a/styles/components/v1/_header.scss
+++ b/styles/components/v1/_header.scss
@@ -15,6 +15,14 @@
     height: 6vw;
     position: relative;
   }
+  a,
+  nav *,
+  .burger {
+    cursor: pointer;
+    * {
+      cursor: pointer;
+    }
+  }
   .btns {
     display: flex;
     align-items: center;
@@ -55,11 +63,9 @@
     &:hover {
       color: aliceblue;
       text-shadow: 0 0 5px slategray, 0 0 4px slategray, 0 0 3px slategray, 0 0 2px slategray;
-    }
-    svg,
-    path {
-      transition: all 0.3s;
-      &:hover {
+      svg,
+      path {
+        transition: all 0.3s;
         color: aliceblue;
       }
     }
