--- a/styles/pages/v1/_home.scss
+++ b/styles/pages/v1/_home.scss
@@ -5,8 +5,13 @@
   align-items: center;
   padding: 5vw;
   .intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     h1 {
-      font-size: 3rem;
+      font-size: 5rem;
       font-weight: 700;
       text-align: center;
       margin: 0;
@@ -14,8 +19,29 @@
     p {
       width: 75%;
       text-align: center;
-      margin: 2rem auto;
+      margin: 3rem auto;
       font-size: 1.5rem;
+    }
+    button {
+      background: transparent;
+      border: 1px solid white;
+      border-radius: 5px;
+      padding: 5px 10px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      font-weight: 500;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      font-size: 1rem;
+      &:hover {
+        background: white;
+        color: black;
+        * {
+          cursor: pointer;
+          color: black;
+        }
+      }
     }
   }
   .anims {
