--- a/styles/style.scss
+++ b/styles/style.scss
@@ -36,10 +36,36 @@
     text-shadow: #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px,
       #000 0px 0px 3px;
   }
+  button {
+    background: transparent;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 1rem;
+    &:hover {
+      background: white;
+      color: black;
+      * {
+        cursor: pointer;
+        color: black;
+      }
+    }
+  }
+  h1 {
+    font-family: "Syne Tactile", cursive;
+  }
 
   @import "./pages/v1/home";
+  @import "./pages/v1/about";
 
   @import "./components/v1/header";
+  @import "./components/v1/footer";
 }
 
 // @import "./components/"
@@ -117,6 +143,13 @@
 
   p {
     text-align: justify;
+  }
+
+  #main-loading-component {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
