--- a/styles/pages/v2/_event.scss
+++ b/styles/pages/v2/_event.scss
@@ -105,6 +105,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
+      word-break: break-all;
       > h2 {
         font-size: 3rem;
       }
@@ -171,7 +172,7 @@
         right: 0px;
         padding: 1%;
         & > h2 {
-          font-size: 1.2rem;
+          font-size: 0.7rem;
           text-align: center;
         }
       }
@@ -186,7 +187,7 @@
         left: 0px;
         padding: 2%;
         & > span {
-          font-size: 1rem;
+          font-size: 0.8rem;
           text-align: center;
         }
       }
@@ -200,6 +201,7 @@
       overflow: hidden;
       .description {
         width: 95%;
+        word-break: break-all;
         > h2 {
           font-size: 1.4rem;
         }
@@ -214,6 +216,7 @@
         }
         > p {
           font-size: 0.9rem;
+          
         }
         b {
           font-weight: 700;
