--- a/styles/style.scss
+++ b/styles/style.scss
@@ -33,8 +33,8 @@
     font-weight: 500;
   }
   .black-text-outline {
-    text-shadow: #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px,
-      #000 0px 0px 3px;
+    text-shadow: #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px,
+      #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px;
   }
   button {
     background: transparent;
@@ -63,6 +63,8 @@
 
   @import "./pages/v1/home";
   @import "./pages/v1/about";
+  @import "./pages/v1/events";
+  @import "./pages/v1/event";
 
   @import "./components/v1/header";
   @import "./components/v1/footer";
@@ -104,7 +106,11 @@
     font-size: 1.1rem;
     color: white;
     border: none;
-    background: linear-gradient(90deg, var(--v3-primary-color), var(--v3-secondary-color));
+    background: linear-gradient(
+      90deg,
+      var(--v3-primary-color),
+      var(--v3-secondary-color)
+    );
     height: fit-content;
   }
   .text-container {
