--- a/styles/style.scss
+++ b/styles/style.scss
@@ -74,7 +74,7 @@
 
 //v2
 .v2 {
-  @import "./pages/v2/home";
+  @import "./pages/v2/home";//home page
   @import "./pages/v2/events";
   @import "./pages/v2/members";
   @import "./components/v2/footer";
