--- a/styles/components/v1/_footer.scss
+++ b/styles/components/v1/_footer.scss
@@ -1,7 +1,7 @@
 #footer {
   display: flex;
   width: 100%;
-  height: 35vh;
+  height: var(--footer-height);
   justify-content: space-between;
   background-color: rgba(215, 215, 255, 0.85);
   align-items: center;
