--- a/styles/components/v1/_header.scss
+++ b/styles/components/v1/_header.scss
@@ -1,6 +1,6 @@
 #header {
   width: 100vw;
-  height: 15%;
+  height: var(--header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
