--- a/styles/components/v3/_header.scss
+++ b/styles/components/v3/_header.scss
@@ -1,9 +1,10 @@
 header {
-  height: var(--v3-header-height);
+  height: var(--header-height
+);
   width: 100%;
   display: flex;
   align-items: center;
-  font-family: var(--v3-font-sans-serif-2);
+  font-family: var(--font-sans-serif-2);
   justify-content: space-around;
   position: fixed;
   right: 0;
@@ -32,32 +33,32 @@ header {
 
     @keyframes glitch {
       0% {
-        text-shadow: 0.15em 0 0 var(--v3-tertiary-color), -0.15em -0.08em 0 var(--v3-primary-color);
+        text-shadow: 0.15em 0 0 var(--tertiary-color), -0.15em -0.08em 0 var(--primary-color);
       }
       14% {
-        text-shadow: 0.15em 0 0 var(--v3-tertiary-color), -0.15em -0.08em 0 var(--v3-primary-color);
+        text-shadow: 0.15em 0 0 var(--tertiary-color), -0.15em -0.08em 0 var(--primary-color);
       }
       15% {
-        text-shadow: -0.05em 0.05em 0 var(--v3-tertiary-color), 0.05em 0.04em 0 var(--v3-primary-color);
+        text-shadow: -0.05em 0.05em 0 var(--tertiary-color), 0.05em 0.04em 0 var(--primary-color);
       }
       49% {
-        text-shadow: -0.05em 0.05em 0 var(--v3-tertiary-color), 0.05em 0.04em 0 var(--v3-primary-color);
+        text-shadow: -0.05em 0.05em 0 var(--tertiary-color), 0.05em 0.04em 0 var(--primary-color);
       }
       50% {
-        text-shadow: 0.1em -0.05em 0 var(--v3-tertiary-color), -0.1em -0.04em 0 var(--v3-primary-color);
+        text-shadow: 0.1em -0.05em 0 var(--tertiary-color), -0.1em -0.04em 0 var(--primary-color);
       }
       99% {
-        text-shadow: 0.1em -0.05em 0 var(--v3-tertiary-color), -0.1em -0.04em 0 var(--v3-primary-color);
+        text-shadow: 0.1em -0.05em 0 var(--tertiary-color), -0.1em -0.04em 0 var(--primary-color);
       }
       100% {
-        text-shadow: -0.15em 0.025em 0 var(--v3-tertiary-color), 0.15em 0.08em 0 var(--v3-primary-color);
+        text-shadow: -0.15em 0.025em 0 var(--tertiary-color), 0.15em 0.08em 0 var(--primary-color);
       }
     }
   }
   a {
     font-weight: 600;
     text-decoration: none;
-    color: var(--v3-secondary-color);
+    color: var(--secondary-color);
     position: relative;
     @include hover-effect();
     &.img-container {
@@ -115,7 +116,7 @@ header {
           width: 60%;
           height: 60%;
           z-index: -1;
-          background-color: var(--v3-primary-color);
+          background-color: var(--primary-color);
           border-radius: 50%;
           opacity: 0;
           transition: 0.3s all ease-in-out;
@@ -124,7 +125,7 @@ header {
           width: 180%;
           height: 180%;
           opacity: 0.6;
-          border: 2px solid var(--v3-secondary-color);
+          border: 2px solid var(--secondary-color);
         }
       }
     }
@@ -137,8 +138,8 @@ header {
     position: absolute;
     width: calc(100% - 12px);
     height: calc(10vh - 15px);
-    border: 3px solid var(--v3-primary-color);
-    filter: drop-shadow(0 0 5px var(--v3-primary-color)) drop-shadow(0 0 5px var(--v3-primary-color));
+    border: 3px solid var(--primary-color);
+    filter: drop-shadow(0 0 5px var(--primary-color)) drop-shadow(0 0 5px var(--primary-color));
     z-index: 3;
   }
   &::after {
@@ -178,10 +179,12 @@ header {
     }
     nav {
       position: absolute;
-      top: var(--v3-header-height);
+      top: var(--header-height
+);
       right: 0;
       width: 60%;
-      height: calc(100vh - var(--v3-header-height));
+      height: calc(100vh - var(--header-height
+));
       flex-direction: column;
       padding: 10%;
       transform: translateX(102%);
@@ -191,9 +194,10 @@ header {
         position: absolute;
         top: 0;
         width: calc(100% - 12px);
-        height: calc(100vh - var(--v3-header-height) - 10px);
-        border: 3px solid var(--v3-primary-color);
-        filter: drop-shadow(0 0 5px var(--v3-primary-color)) drop-shadow(0 0 5px var(--v3-primary-color));
+        height: calc(100vh - var(--header-height
+) - 10px);
+        border: 3px solid var(--primary-color);
+        filter: drop-shadow(0 0 5px var(--primary-color)) drop-shadow(0 0 5px var(--primary-color));
         z-index: -1;
       }
       &::after {
@@ -203,7 +207,8 @@ header {
         position: absolute;
         z-index: -2;
         width: calc(100% - 12px);
-        height: calc(100vh - var(--v3-header-height) - 5px);
+        height: calc(100vh - var(--header-height
+) - 5px);
         backdrop-filter: blur(10px);
       }
       .socials-link {
@@ -217,12 +222,12 @@ header {
           content: "Follow us";
           top: -4vh;
           font-size: 1.2rem;
-          font-family: var(--v3-font-sans-serif-1);
+          font-family: var(--font-sans-serif-1);
         }
         &::after {
           position: absolute;
           content: "";
-          background-color: var(--v3-primary-color);
+          background-color: var(--primary-color);
           height: 3px;
           width: 100%;
           top: -8vh;
@@ -245,9 +250,9 @@ header {
       .line {
         width: 100%;
         height: 4px;
-        background-color: var(--v3-secondary-color);
+        background-color: var(--secondary-color);
         transition: 0.3s all ease-in-out;
-        box-shadow: 0 0 5px var(--v3-secondary-color), 0 0 5px rgb(0, 0, 0);
+        box-shadow: 0 0 5px var(--secondary-color), 0 0 5px rgb(0, 0, 0);
       }
       &:hover {
         cursor: pointer;
