--- a/styles/pages/v2/_events.scss
+++ b/styles/pages/v2/_events.scss
@@ -3,11 +3,11 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: var(--v2-font-color-main);
+  color: var(--font-color-main);
   width: 100%;
   height: auto;
   padding: 2% 5%;
-  font-family: var(--v2-font-hirosh);
+  font-family: var(--font-hirosh);
   min-height: 80vh;
   .heading {
     position: relative;
@@ -31,7 +31,7 @@
   //   background-size: 100%;
   //   background-repeat: no-repeat;
   //   background-position: 80% 47%;
-  //   font-family: var(--v2-font-hirosh);
+  //   font-family: var(--font-hirosh);
   // }
   a {
     text-decoration: none;
@@ -55,7 +55,7 @@
     position: absolute;
     height: 20%;
     width: 100%;
-    background: linear-gradient(var(--v2-main-bg), rgba(0, 0, 0, 0));
+    background: linear-gradient(var(--main-bg), rgba(0, 0, 0, 0));
     top: 0;
     left: 0;
     z-index: -1;
@@ -79,7 +79,7 @@
       & > h3 {
         font-size: 3rem;
         align-self: flex-start;
-        background: -webkit-linear-gradient(var(--v2-color1), var(--v2-color3));
+        background: -webkit-linear-gradient(var(--color1), var(--color3));
         background-clip: text;
         -webkit-text-fill-color: transparent;
         text-transform: uppercase;
@@ -95,7 +95,7 @@
           z-index: 2;
           width: 100%;
           background: linear-gradient(black, black) padding-box,
-            linear-gradient(to right, var(--v2-color1), var(--v2-color3))
+            linear-gradient(to right, var(--color1), var(--color3))
               border-box;
           border: 3px solid transparent;
         }
@@ -112,25 +112,25 @@
           height: 250px;
           margin: 30px 10px;
           background: linear-gradient(black, black) padding-box,
-            linear-gradient(to right, var(--v2-color1), var(--v2-color3))
+            linear-gradient(to right, var(--color1), var(--color3))
               border-box;
           border-radius: 30px;
           border: 3px solid transparent;
           display: flex;
           justify-content: center;
           align-items: center;
-          box-shadow: 0px 0px 5px 5px var(--v2-color1),
-            0px 0px 10px 5px var(--v2-color3);
+          box-shadow: 0px 0px 5px 5px var(--color1),
+            0px 0px 10px 5px var(--color3);
           .img-container {
             width: 350px;
             height: 200px;
             background: linear-gradient(black, black) padding-box,
-              linear-gradient(to right, var(--v2-color1), var(--v2-color3))
+              linear-gradient(to right, var(--color1), var(--color3))
                 border-box;
             border-radius: 30px;
             border: 3px solid transparent;
-            box-shadow: 0px 0px 2px 2px var(--v2-color1),
-              0px 0px 1px 1px var(--v2-color3);
+            box-shadow: 0px 0px 2px 2px var(--color1),
+              0px 0px 1px 1px var(--color3);
           }
           .stuff-container {
             width: 50%;
@@ -142,8 +142,8 @@
               font-size: 2rem;
               padding: 10px 10px;
               background: -webkit-linear-gradient(
-                var(--v2-color1),
-                var(--v2-color3)
+                var(--color1),
+                var(--color3)
               );
               background-clip: text;
               -webkit-text-fill-color: transparent;
@@ -152,8 +152,8 @@
             }
             & > span {
               background: -webkit-linear-gradient(
-                var(--v2-color1),
-                var(--v2-color3)
+                var(--color1),
+                var(--color3)
               );
               background-clip: text;
               -webkit-text-fill-color: transparent;
@@ -162,10 +162,10 @@
           }
         }
         .cardu:hover {
-          box-shadow: 0px 0px 30px 10px var(--v2-color1),
-            0px 0px 60px 10px var(--v2-color3),
-            inset 0px 0px 10px 10px var(--v2-color1),
-            inset 0px 0px 20px 10px var(--v2-color3);
+          box-shadow: 0px 0px 30px 10px var(--color1),
+            0px 0px 60px 10px var(--color3),
+            inset 0px 0px 10px 10px var(--color1),
+            inset 0px 0px 20px 10px var(--color3);
         }
       }
     }
@@ -182,7 +182,7 @@
         font-size: 3rem;
         margin: 10px 10px;
         align-self: flex-start;
-        background: -webkit-linear-gradient(var(--v2-color2), var(--v2-color4));
+        background: -webkit-linear-gradient(var(--color2), var(--color4));
         background-clip: text;
         -webkit-text-fill-color: transparent;
         position: relative;
@@ -197,7 +197,7 @@
           z-index: 2;
           width: 100%;
           background: linear-gradient(black, black) padding-box,
-            linear-gradient(to right, var(--v2-color2), var(--v2-color4))
+            linear-gradient(to right, var(--color2), var(--color4))
               border-box;
           border: 3px solid transparent;
         }
@@ -216,7 +216,7 @@
           width: 70%;
           padding: 20px;
           background: linear-gradient(black, black) padding-box,
-            linear-gradient(to right, var(--v2-color2), var(--v2-color4))
+            linear-gradient(to right, var(--color2), var(--color4))
               border-box;
           border-radius: 30px;
           border: 3px solid transparent;
@@ -224,7 +224,7 @@
             width: 100%;
             height: 50%;
             background: linear-gradient(black, black) padding-box,
-              linear-gradient(to right, var(--v2-color2), var(--v2-color4))
+              linear-gradient(to right, var(--color2), var(--color4))
                 border-box;
             border-radius: 30px;
             border: 3px solid transparent;
@@ -239,8 +239,8 @@
             > h3 {
               font-size: 0.8rem;
               background: -webkit-linear-gradient(
-                var(--v2-color2),
-                var(--v2-color4)
+                var(--color2),
+                var(--color4)
               );
               background-clip: text;
               -webkit-text-fill-color: transparent;
@@ -249,10 +249,10 @@
           }
         }
         .cardp:hover {
-          box-shadow: 0px 0px 20px 5px var(--v2-color2),
-            0px 0px 30px 5px var(--v2-color4),
-            inset 0px 0px 5px 5px var(--v2-color2),
-            inset 0px 0px 10px 5px var(--v2-color4);
+          box-shadow: 0px 0px 20px 5px var(--color2),
+            0px 0px 30px 5px var(--color4),
+            inset 0px 0px 5px 5px var(--color2),
+            inset 0px 0px 10px 5px var(--color4);
         }
       }
     }
@@ -292,7 +292,7 @@
             z-index: 2;
             width: 95%;
             background: linear-gradient(black, black) padding-box,
-              linear-gradient(to right, var(--v2-color1), var(--v2-color3))
+              linear-gradient(to right, var(--color1), var(--color3))
                 border-box;
             border: 3px solid transparent;
           }
@@ -337,7 +337,7 @@
             z-index: 2;
             width: 95%;
             background: linear-gradient(black, black) padding-box,
-              linear-gradient(to right, var(--v2-color2), var(--v2-color4))
+              linear-gradient(to right, var(--color2), var(--color4))
                 border-box;
             border: 3px solid transparent;
           }
