--- a/styles/pages/v2/_home.scss
+++ b/styles/pages/v2/_home.scss
@@ -1,5 +1,5 @@
 #Home {
-  background-color: var(--v2-main-bg);
+  background-color: var(--main-bg);
   // background-color: rgba(25, 25, 25);
   .main-banner {
     height: 82.5vh;
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: var(--v2-font-kato);
+    font-family: var(--font-kato);
     text-transform: uppercase;
     color: aliceblue;
 
@@ -43,7 +43,7 @@
     height: auto;
     padding: 50px 6vw;
     text-align: justify;
-    // background-color: var(--v2-main-bg);
+    // background-color: var(--main-bg);
     color: white;
     justify-content: center;
     align-items: center;
@@ -66,7 +66,7 @@
       position: absolute;
       height: 20%;
       width: 100%;
-      background: linear-gradient(var(--v2-main-bg), rgba(0, 0, 0, 0));
+      background: linear-gradient(var(--main-bg), rgba(0, 0, 0, 0));
       top: 0;
       left: 0;
       z-index: -1;
@@ -79,10 +79,10 @@
       flex-direction: column;
       padding: 30px 0px;
       padding-right: 20px;
-      font-family: var(--v2-font-poppins);
+      font-family: var(--font-poppins);
 
       h3 {
-        font-family: var(--v2-font-kato);
+        font-family: var(--font-kato);
         font-size: 2.5rem;
         margin-left: 30px;
         margin-bottom: 30px;
@@ -100,7 +100,7 @@
         margin-bottom: 20px;
         &::before {
           margin-right: 10px;
-          font-family: var(--v2-font-hirosh);
+          font-family: var(--font-hirosh);
           font-size: 1.7rem;
         }
       }
@@ -209,7 +209,7 @@
       width: 100%;
       padding: 10px 5px;
       margin-top: 25px;
-      // background-color: var(--v2-main-bg);
+      // background-color: var(--main-bg);
       div {
         width: 100%;
         height: fit-content;
@@ -218,7 +218,7 @@
         padding: 3px 0px;
         margin-top: 30px;
         h3 {
-          font-family: var(--v2-font-kato);
+          font-family: var(--font-kato);
           font-size: 1.2rem;
           margin-left: 30px;
           margin-bottom: 5px;
@@ -236,7 +236,7 @@
           margin-bottom: 5px;
           &::before {
             margin-right: 10px;
-            font-family: var(--v2-font-hirosh);
+            font-family: var(--font-hirosh);
             font-size: 1.1rem;
           }
         }
