--- a/styles/pages/v2/_members.scss
+++ b/styles/pages/v2/_members.scss
@@ -22,14 +22,14 @@
     right: $rit;
     position: absolute;
   }
-  background-color: var(--v2-main-bg);
+  background-color: var(--main-bg);
   width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: var(--v2-font-hirosh);
+  font-family: var(--font-hirosh);
   position: relative;
   &::before {
     content: "";
@@ -40,8 +40,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     filter: grayscale(100%);
-    opacity: 0.3;
-    // z-index: 0;
+    opacity: 0.2;
+    z-index: 0;
     // transform: rotate(180deg);
     top: 0;
     // right: -300px;
@@ -51,10 +51,10 @@
     position: absolute;
     height: 20%;
     width: 100%;
-    background: linear-gradient(var(--v2-main-bg), rgba(0, 0, 0, 0));
+    background: linear-gradient(var(--main-bg), rgba(0, 0, 0, 0));
     top: 0;
     left: 0;
-    z-index: -1;
+    // z-index: -1;
   }
   h1 {
     color: white;
@@ -65,6 +65,7 @@
     background-size: 1350px;
     background-repeat: no-repeat;
     background-position: 55% 48%;
+    z-index: 1;
   }
   .member-container {
     width: 100%;
@@ -82,7 +83,7 @@
       align-items: center;
       margin: 50px 10px;
       h2 {
-        background: linear-gradient(var(--v2-color1), var(--v2-color3));
+        background: linear-gradient(var(--color1), var(--color3));
         @include textStyle(3rem);
         margin-bottom: 10px;
         position: relative;
@@ -97,7 +98,7 @@
           z-index: 2;
           width: 98%;
           background: linear-gradient(black, black) padding-box,
-            linear-gradient(to right, var(--v2-color1), var(--v2-color3)) border-box;
+            linear-gradient(to right, var(--color1), var(--color3)) border-box;
           border: 3px solid transparent;
         }
       }
@@ -129,7 +130,7 @@
             }
           }
           h3 {
-            background: linear-gradient(var(--v2-color1), var(--v2-color3));
+            background: linear-gradient(var(--color1), var(--color3));
             @include textStyle(1.3rem);
             top: 5%;
             right: 17.5%;
@@ -138,7 +139,7 @@
             z-index: 1;
           }
           span.tag {
-            background: linear-gradient(var(--v2-color1), var(--v2-color3));
+            background: linear-gradient(var(--color1), var(--color3));
             @include textStyle(1rem);
             bottom: 7.5%;
             right: 9%;
@@ -147,7 +148,7 @@
             z-index: 1;
           }
           span.domain {
-            background: linear-gradient(var(--v2-color1), var(--v2-color3));
+            background: linear-gradient(var(--color1), var(--color3));
             @include textStyle(1.3rem);
             bottom: 52.5%;
             left: -26%;
@@ -179,7 +180,7 @@
               position: relative;
             }
             a {
-              color: var(--v2-color1);
+              color: var(--color1);
               font-size: 1.25rem;
               height: 100%;
               display: flex;
@@ -190,16 +191,16 @@
         }
 
         .card::after {
-          @include suedo(80%, 80%, 2%, 4%, auto, auto, var(--v2-color1), var(--v2-color3));
+          @include suedo(80%, 80%, 2%, 4%, auto, auto, var(--color1), var(--color3));
         }
         .card::before {
-          @include suedo(20%, 60%, auto, auto, 5%, 7%, var(--v2-color1), var(--v2-color3));
+          @include suedo(20%, 60%, auto, auto, 5%, 7%, var(--color1), var(--color3));
         }
       }
 
       &.members {
         h2 {
-          background: linear-gradient(var(--v2-color2), var(--v2-color4));
+          background: linear-gradient(var(--color2), var(--color4));
           @include textStyle(3rem);
           position: relative;
           width: 100%;
@@ -213,7 +214,7 @@
             z-index: 2;
             width: 98%;
             background: linear-gradient(black, black) padding-box,
-              linear-gradient(to right, var(--v2-color2), var(--v2-color4)) border-box;
+              linear-gradient(to right, var(--color2), var(--color4)) border-box;
             border: 3px solid transparent;
           }
         }
@@ -221,26 +222,26 @@
         .cards-container {
           .card {
             h3 {
-              background: linear-gradient(var(--v2-color2), var(--v2-color4));
+              background: linear-gradient(var(--color2), var(--color4));
               @include textStyle(1.3rem);
             }
             span.tag {
-              background: linear-gradient(var(--v2-color2), var(--v2-color4));
+              background: linear-gradient(var(--color2), var(--color4));
               @include textStyle(1rem);
             }
             span.domain {
-              background: linear-gradient(var(--v2-color2), var(--v2-color4));
+              background: linear-gradient(var(--color2), var(--color4));
               @include textStyle(1.3rem);
             }
             &::after {
-              @include suedo(80%, 80%, 2%, 4%, auto, auto, var(--v2-color2), var(--v2-color4));
+              @include suedo(80%, 80%, 2%, 4%, auto, auto, var(--color2), var(--color4));
             }
             &::before {
-              @include suedo(20%, 60%, auto, auto, 5%, 7%, var(--v2-color2), var(--v2-color4));
+              @include suedo(20%, 60%, auto, auto, 5%, 7%, var(--color2), var(--color4));
             }
             .icon-container {
               a {
-                color: var(--v2-color2);
+                color: var(--color2);
               }
             }
           }
@@ -347,7 +348,7 @@
             }
 
             h3 {
-              background: linear-gradient(var(--v2-color1), var(--v2-color3));
+              background: linear-gradient(var(--color1), var(--color3));
               @include textStyle(0.6rem);
               top: 5%;
               right: 17.5%;
@@ -356,7 +357,7 @@
               z-index: 1;
             }
             span.tag {
-              background: linear-gradient(var(--v2-color1), var(--v2-color3));
+              background: linear-gradient(var(--color1), var(--color3));
               @include textStyle(0.4rem);
               bottom: 7.5%;
               right: 9%;
@@ -365,7 +366,7 @@
               z-index: 1;
             }
             span.domain {
-              background: linear-gradient(var(--v2-color1), var(--v2-color3));
+              background: linear-gradient(var(--color1), var(--color3));
               @include textStyle(0.5rem);
               bottom: 52.5%;
               left: -26%;
@@ -388,7 +389,7 @@
                 position: relative;
               }
               a {
-                color: var(--v2-color1);
+                color: var(--color1);
                 font-size: 0.5rem;
                 height: 100%;
                 display: flex;
