--- a/styles/pages/v3/_events.scss
+++ b/styles/pages/v3/_events.scss
@@ -8,7 +8,7 @@
   h1 {
     font-size: 4rem;
     letter-spacing: 3px;
-    border-bottom: 1px solid var(--v3-secondary-color);
+    border-bottom: 1px solid var(--secondary-color);
   }
   h2 {
     text-transform: uppercase;
@@ -20,7 +20,7 @@
     padding: 5px 15px;
     text-shadow: (0 0 3px white), (0 0 3px white);
     letter-spacing: 2px;
-    border: 3px solid var(--v3-primary-color);
+    border: 3px solid var(--primary-color);
     position: relative;
     &::before {
       content: "";
@@ -29,8 +29,8 @@
       width: 80%;
       height: 100%;
       position: absolute;
-      border-top: 3px solid var(--v3-accent-color);
-      border-bottom: 3px solid var(--v3-accent-color);
+      border-top: 3px solid var(--accent-color);
+      border-bottom: 3px solid var(--accent-color);
     }
   }
   .all-event-container {
@@ -50,32 +50,32 @@
       align-items: center;
       overflow: hidden;
       &:nth-child(even) {
-        border: 4px solid var(--v3-primary-color);
-        box-shadow: 0 0 15px var(--v3-primary-color);
+        border: 4px solid var(--primary-color);
+        box-shadow: 0 0 15px var(--primary-color);
         h3 {
-          background-color: var(--v3-primary-color);
+          background-color: var(--primary-color);
         }
         span {
-          background-color: var(--v3-primary-color);
+          background-color: var(--primary-color);
         }
         .img-container {
           &::after {
-            background-color: var(--v3-secondary-color);
+            background-color: var(--secondary-color);
           }
         }
       }
       &:nth-child(odd) {
-        border: 4px solid var(--v3-secondary-color);
-        box-shadow: 0 0 15px var(--v3-secondary-color);
+        border: 4px solid var(--secondary-color);
+        box-shadow: 0 0 15px var(--secondary-color);
         h3 {
-          background-color: var(--v3-secondary-color);
+          background-color: var(--secondary-color);
         }
         span {
-          background-color: var(--v3-secondary-color);
+          background-color: var(--secondary-color);
         }
         .img-container {
           &::after {
-            background-color: var(--v3-primary-color);
+            background-color: var(--primary-color);
           }
         }
       }
@@ -87,7 +87,7 @@
         top: 0;
         clip-path: polygon(0 0, 100% 0, 90% 102%, 10% 102%);
         z-index: 1;
-        font-family: var(--v3-font-sans-serif-2);
+        font-family: var(--font-sans-serif-2);
         font-weight: 800;
         padding: 5px 1em 5px 1em;
       }
@@ -171,12 +171,12 @@
       }
       :nth-child(even) {
         p {
-          background-color: var(--v3-primary-color);
+          background-color: var(--primary-color);
         }
       }
       :nth-child(odd) {
         p {
-          background-color: var(--v3-secondary-color);
+          background-color: var(--secondary-color);
         }
       }
     }
