--- a/styles/style.scss
+++ b/styles/style.scss
@@ -80,6 +80,8 @@
   @import "./components/v2/footer";
   @import "./components/v2/header";
   @import "./pages/v2/event";
+
+   background-color:var(--main-bg,black);
 }
 // @import "./components/"
 //v3
@@ -93,11 +95,11 @@
   @import "./components/v3/header";
   @import "./components/v3/footer";
 
-  background: var(--v3-accent-color);
+  background: var(--accent-color);
   color: white;
-  font-family: var(--v3-font-sans-serif-1);
+  font-family: var(--font-sans-serif-1);
   & > #__next > section {
-    min-height: calc(100vh - var(--v3-footer-height));
+    min-height: calc(100vh - var(--footer-height));
   }
   .button {
     cursor: pointer;
@@ -108,8 +110,8 @@
     border: none;
     background: linear-gradient(
       90deg,
-      var(--v3-primary-color),
-      var(--v3-secondary-color)
+      var(--primary-color),
+      var(--secondary-color)
     );
     height: fit-content;
   }
@@ -123,7 +125,7 @@
   h1 {
     text-transform: uppercase;
     font-weight: 400;
-    font-family: var(--v3-font-sans-serif-2);
+    font-family: var(--font-sans-serif-2);
     color: white;
     position: relative;
   }
@@ -140,11 +142,11 @@
   }
 
   h1::before {
-    text-shadow: -5px 0 var(--v3-primary-color);
+    text-shadow: -5px 0 var(--primary-color);
   }
 
   h1::after {
-    text-shadow: 5px 0 var(--v3-secondary-color);
+    text-shadow: 5px 0 var(--secondary-color);
   }
 
   p {
